fix(@dpc-sdp/ripple-ui-core): :bug: fixed breadcrumbs not truncating with ellipsis on small screen
To make 'text-overflow:ellipsis' work properly all the children need to be inline elements. I also changed the max-width to be 100% so that the breadcrumbs fill whatever container they're in.

R20-275

--- a/packages/ripple-ui-core/src/components/breadcrumbs/breadcrumbs.css
+++ b/packages/ripple-ui-core/src/components/breadcrumbs/breadcrumbs.css
@@ -10,7 +10,7 @@
   padding-right: calc(var(--rpl-sp-5) - var(--rpl-border-1));
   padding-bottom: calc(var(--rpl-sp-3) - var(--rpl-border-1));
   padding-left: calc(var(--rpl-sp-5) - var(--rpl-border-1));
-  max-width: calc(100% - (2 * var(--rpl-sp-5)) - (2 * var(--rpl-border-1)));
+  max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -22,7 +22,10 @@
   }
 
   &__items {
+    display: inline; /* This needs to be inline for text-overflow:ellipsis to work */
+
     @media (--rpl-bp-m) {
+      display: block;
       margin: calc(0px - var(--rpl-sp-2)) 0 0 0; /* Offset item top padding */
     }
   }
@@ -61,7 +64,7 @@
   }
 
   &__item-link {
-    display: inline-block;
+    display: inline;
 
     &,
     &:visited {
